Added Blossom LBR, links to personnel pages within project

--- a/projects/_posts/2017-08-22-Blossom.md
+++ b/projects/_posts/2017-08-22-Blossom.md
@@ -1,7 +1,7 @@
 ---
 layout: project
 title: "Blossom – A Handcrafted Soft Social Robot"
-image: /assets/images/projects/blossom-project.png
+image: /assets/images/projects/blossom-project.jpg
 category: projects
 published: true
 tags: [design]
@@ -14,7 +14,7 @@ Blossom is a robot that is soft inside and out. It is built using traditional cr
 
 Blossom is a collaboration between Cornell University’s Human-Robot Collaboration and Companionship Lab and Google Creative Technologies Singapore. 
 
-**Collaborators: Michael Suguitan, Greg Holman, James Redd, and Emma Cohn (Cornell); Miguel de Andrés Clavera, Rosa Uchima, Gene Brutty, Alex Chia, and Mandy Vu (Google).**
+**Collaborators: [Michael Suguitan](http://hrc2.io/people/michael-suguitan), Greg Holman, James Redd, Ankita Chandak, [Michael Hu](http://hrc2.io/people/michael-hu), Emma Cohn, [Miranda Jeffries](http://hrc2.io/people/miranda-jeffreys), [Antoine Klopocki](http://hrc2.io/people/antoine-klopocki) (Cornell); Miguel de Andrés Clavera, Rosa Uchima, Gene Brutty, Alex Chia, and Mandy Vu (Google).**
 
 Blossom is currently used in research at Cornell University. We study new mechanical designs for social robots, including how to use soft materials and soft mechanisms in social robot design.
 
