--- a/people/_posts/2018-01-20-quinn-liu.md
+++ b/people/_posts/2018-01-20-quinn-liu.md
@@ -9,7 +9,7 @@ email: nd353@cornell.edu
 twitter: 
 github: nikhildhawan117
 scholar: 
-image: /assets/images/team/nikhil-dhawan.jpg
+image: /assets/images/team/anonymous-robot.svg
 cv: 
 alum: false
 ---
