--- a/people/_posts/2017-09-01-yuhan-hu.md
+++ b/people/_posts/2017-09-01-yuhan-hu.md
@@ -13,5 +13,5 @@ image: /assets/images/team/yuhan-hu.jpg
 cv: 
 alum: false
 ---
-Yuhan Hu is a 1st year Ph.D student in the lab, working on a novel non-verbal expressive channel - skin texture. 
+Yuhan Hu is a 1st year Ph.D student in the lab, working on texture-changing social robots. 
 
