Adding pictures for Miranda and Emma, links to their pages from the Blossom page

--- a/people/_posts/2017-02-01-emma-cohn.md
+++ b/people/_posts/2017-02-01-emma-cohn.md
@@ -9,7 +9,7 @@ email: emc284@cornell.edu
 twitter: 
 github: emmac127
 scholar: 
-image: /assets/images/team/anonymous-robot.svg
+image: /assets/images/team/emma-cohn.jpg
 cv: 
 alum: false
 ---
