fixed layout of project page and added real youtube embed to blossom and goosebumps

--- a/projects/_posts/2017-08-22-Blossom.md
+++ b/projects/_posts/2017-08-22-Blossom.md
@@ -10,7 +10,7 @@ tags: [design]
 
 Blossom is a robot that is soft inside and out. It is built using traditional crafts like wool and wood. We wanted to bring back warm materials to home robotics, instead of more plastics, glass, and metal. You can customize Blossom by knitting new exteriors and attaching different crafted parts to make each robot unique.
 
-[![Blossom - A Handcrafted Social Robot](http://img.youtube.com/vi/okFoKJK_N3w/0.jpg)](http://www.youtube.com/watch?v=okFoKJK_N3w "Blossom - A Handcrafted Social Robot")
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/okFoKJK_N3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 
 Blossom is a collaboration between Cornell University’s Human-Robot Collaboration and Companionship Lab and Google Creative Technologies Singapore. 
 
