More press and news

--- a/papers/_posts/2019-03-11-ebrd-hri.md
+++ b/papers/_posts/2019-03-11-ebrd-hri.md
@@ -2,7 +2,7 @@
 layout: paper
 title: "Monetary-Incentive Competition between Humans and Robots: Experimental Results"
 year: "2019"
-shortref: "Kshirsagar, Dreyfuss, Ishai, Heffetz & Hoffman. HRI 2019 (accepted)"
+shortref: "Kshirsagar, Dreyfuss, Ishai, Heffetz & Hoffman. HRI 2019"
 shorttitle: "Monetary-Incentive Competition between Humans and Robots: Experimental Result"
 nickname: ebrd-HRI
 journal: "ACM/IEEE International  Conference on Human-Robot Interaction (HRI 2019)"
@@ -12,7 +12,7 @@ pages:
 authors: "Kshirsagar A, Dreyfuss B, Ishai G, Heffetz O, & Hoffman G"
 image: /assets/images/papers/ebrd-hri.jpg
 pdf:
-pdflink:
+fulltext: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3323698
 pubtype: conference
 github:
 pmid:  
@@ -22,7 +22,8 @@ figshare:
 doi:
 category: papers
 published: true
-tags: [competition, loss-aversion]
+award: Best Full Paper Award
+tags: [design, best-paper]
 ---
 {% include JB/setup %}
 
