--- a/papers/_posts/2019-03-11-ebrd-hri.md
+++ b/papers/_posts/2019-03-11-ebrd-hri.md
@@ -5,13 +5,13 @@ year: "2019"
 shortref: "Kshirsagar, Dreyfuss, Ishai, Heffetz & Hoffman. HRI 2019"
 shorttitle: "Monetary-Incentive Competition between Humans and Robots: Experimental Result"
 nickname: ebrd-HRI
-journal: "ACM/IEEE International  Conference on Human-Robot Interaction (HRI 2019)"
+journal: "ACM/IEEE International  Conference on Human-Robot Interaction (HRI)"
 volume:
 issue:
 pages:
 authors: "Kshirsagar A, Dreyfuss B, Ishai G, Heffetz O, & Hoffman G"
-image: /assets/images/papers/ebrd-hri.jpg
-pdf:
+image: ebrd-hri.jpg
+pdf: KshirsagaretalHRI19.pdf
 fulltext: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3323698
 pubtype: conference
 github:
@@ -19,16 +19,16 @@ pmid:
 pmcid:
 f1000:
 figshare:
-doi:
+doi: 10.1109/HRI.2019.8673201
 category: papers
 published: true
-award: Best Full Paper Award
+award:
 tags: [design, best-paper]
 ---
 {% include JB/setup %}
 
 # Abstract
 
-In a controlled experiment, participants (n = 60) competed in a monotonous task with an autonomous robot for
+In a controlled experiment, participants (_n = 60_) competed in a monotonous task with an autonomous robot for
 real monetary incentives. For each participant, we manipulated the robot’s performance and the monetary incentive level across ten rounds. In each round, a participant’s performance compared to the robot’s would affect their odds in a lottery for the monetary prize. Standard economic theory predicts that people’s effort will increase with prize value. Furthermore, recent work in behavioral economics predicts that there will also be a discouragement effect, with stronger robot performance discouraging human effort, and that this effect will increase with prize. We were not able to detect a meaningful effect of monetary prize, and were thus not able to replicate the results of a prior similar experiment that involved a sequential competition between two humans. However, we found a small discouragement effect, with human effort decreasing
-with increased robot performance, significant at the p < 0.005 level. Using per-round subjective indicators, we also found a positive effect of robot performance on its perceived competence, a negative effect on the participants’ liking of the robot, and a negative effect on the participants’ own competence, all at p < 0.0001. These findings shed light on how people may exert work effort and perceive robotic competitors in a human-robot workforce, and could have implications on labor supply decisions and the design of compensation schemes in the workplace.
+with increased robot performance, significant at the _p < 0.005_ level. Using per-round subjective indicators, we also found a positive effect of robot performance on its perceived competence, a negative effect on the participants’ liking of the robot, and a negative effect on the participants’ own competence, all at _p < 0.0001_. These findings shed light on how people may exert work effort and perceive robotic competitors in a human-robot workforce, and could have implications on labor supply decisions and the design of compensation schemes in the workplace.
