--- a/papers/_posts/2019-01-08-ifeed-dcc.md
+++ b/papers/_posts/2019-01-08-ifeed-dcc.md
@@ -29,4 +29,4 @@ tags: [collaboration, design]
 
 # Abstract
 
-Cognitive differences between how people perceive and process information have been broadly studied in the fields of education and psychology. Previous findings show that comprehension is optimized when information presentation aligns with the cognitive abilities and preferences of an individual. On the other hand, the possession of field knowledge has also been studied to influence learning outcome and perception. This paper aims to understand the effects of individual’s information processing styles and field knowledge on design decision-making, specifically focusing on designer learning and user experience. Two distinct decision support systems interfaces were developed to better examine the effect using a mixed model design. A total of 48 college students participated in the experimental study and interacted with the two different interfaces of a satellite design system in a randomized order. Analysis results show significant impacts of field knowledge and visual processing style on both learning and user experience. Potential interaction effects with the design support system interface type and cognitive styles were also observed.
+In this paper, we introduce the concept of exploring the feature space to aid learning in the context of design space exploration. The feature space is defined as a possible set of features mapped in a 2D plane with each axis representing different interestingness measures, such as precision or recall. Similar to how a designer explores the design space, one can explore the feature space by observing how different features vary in their ability to explain a set of design solutions. We hypothesize that such process helps designers gain a better understanding of the design space. To test this hypothesis, we conduct a controlled experiment with human subjects. The result suggests that exploring the feature space has the potential to enhance the user’s ability to identify important features and predict the performance of a design. However, such observation is limited only to the participants with some previous experience with design space exploration.
