--- a/papers/_posts/2017-06-27-yolo-ido.md
+++ b/papers/_posts/2017-06-27-yolo-ido.md
@@ -10,7 +10,7 @@ volume:
 issue: 
 pages: 423-429
 authors: "Alves-Oliveira, P., Paiva, A., Arriaga, P., & Hoffman, G."
-image: yolo-study.png
+image: yolo-study.jpg
 pdf: AlvesetalIDC17.pdf
 pdflink:
 pubtype: conference
