And more papers

--- a/papers/_posts/2017-06-27-yolo-idc.md
+++ b/papers/_posts/2017-06-27-yolo-idc.md
@@ -3,7 +3,7 @@ layout: paper
 title: "YOLO, a Robot for Creativity: A Co-Design Study with Children"
 year: "2017"
 shortref: "Alves-Oliveira et al. IDC 2017"
-shorttitle: "YOLO, a Robot for Creativity: A Co-Design Study with Children"
+shorttitle: "YOLO, a Robot for Creativity"
 nickname: yolo-idc
 journal: "2017 Conference on Interaction Design and Children (IDC)"
 volume: 
