--- a/papers/_posts/2019-01-08-ifeed-dcc.md
+++ b/papers/_posts/2019-01-08-ifeed-dcc.md
@@ -1,7 +1,7 @@
 ---
 layout: paper
 title: "Exploring the Feature Space to Aid Learning in Design Space Exploration"
-year: "2019"
+year: 2019
 shortref: "Bang et al. DCC 2018"
 shorttitle: "Exploring the Feature Space to Aid Learning in Design Space Exploration"
 nickname: cognitive-style
