--- a/papers/_posts/2019-03-11-ebrd-hri.md
+++ b/papers/_posts/2019-03-11-ebrd-hri.md
@@ -1,7 +1,7 @@
 ---
 layout: paper
 title: "Monetary-Incentive Competition between Humans and Robots: Experimental Results"
-year: "2019"
+year: 2019
 shortref: "Kshirsagar, Dreyfuss, Ishai, Heffetz & Hoffman. HRI 2019"
 shorttitle: "Monetary-Incentive Competition between Humans and Robots: Experimental Result"
 nickname: ebrd-HRI
