Projects now have excerpt

--- a/projects/_posts/2016-01-01-ThirdArm.md
+++ b/projects/_posts/2016-01-01-ThirdArm.md
@@ -10,6 +10,8 @@ tags: [design]
 
 The Wearable Robotic Third Arm project seeks to build a lightweight supernumerary robotic arm for assisting a user in collaborative activities.
 
+<!--more-->
+
 <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/FWtD6YCaT4c?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 
 **Collaborators: [Vighnesh Vatsal](http://hrc2.io/people/vighnesh-vatsal), Tatsuhiro Koshi, Mei Zhang**
