--- a/projects/_posts/2018-01-10-EBRD.md
+++ b/projects/_posts/2018-01-10-EBRD.md
@@ -1,14 +1,16 @@
 ---
 layout: project
-title: "Decision Making with a Robot"
+title: "Economic Decision Making with a Robot"
 image: /assets/images/projects/ebrd-project.jpg
 category: projects
 published: true
-tags: [design]
+tags: [studies]
 ---
 {% include JB/setup %}
 
-This project aims to study how people make decisions in the presence of robots when there are monetary rewards at stake.
+This project is a collaboration between roboticists and behavioral economists, and studies how people make economic decisions in the presence of robots when there are monetary rewards at stake. 
+
+<!--more-->
 
 With robots entering the workforce, and robots along with other artificial intelligence (AI) agents playing an increasing part in the economy, we can expect situations where people’s real economic outcomes depend on a robot’s performance. We are therefore interested in understanding how people’s efforts for monetary outcomes are affected by a collaborating or competing robot’s performance. Beyond the study of people’s efforts, we are also interested in understanding human attitudes towards the robot and towards themselves in such settings, and how those are affected by the robot’s performance. This work is a collaboration between Behavioral Economists from Hibrew University of Jerusalem, Israel (HUJI) and Robotics Researchers from Cornell University, USA (Cornell)
 
