updated handovers project team members

--- a/people/past/2019-02-18-song-ye.md
+++ b/people/past/2019-02-18-song-ye.md
@@ -11,6 +11,6 @@ github: yepai1
 scholar:
 image: /assets/images/team/song-ye.png
 cv:
-alum: false
+alum: true
 ---
 Song Ye is an Information Science Masters student in the lab working on the development of experiment setup to study economic decision making with a robot.
