--- a/papers/_posts/2019-06-26-yolo-rss.md
+++ b/papers/_posts/2019-06-26-yolo-rss.md
@@ -14,7 +14,7 @@ image: interaction-yolo.png
 pdf: AlvesOliveiraRSSPioneers19.pdf
 pdflink: 
 fulltext:  
-pubtype: workshop
+pubtype: conference
 github: 
 pmid:  
 pmcid: 
