reduced images sizes

--- a/papers/_posts/2011-06-27-on-stage.md
+++ b/papers/_posts/2011-06-27-on-stage.md
@@ -10,7 +10,7 @@ volume:
 issue: 
 pages: 1-5
 authors: "Hoffman, G."
-image: on-stage.png
+image: on-stage.jpg
 pdf: HoffmanWkRSS11.pdf
 pdflink: 
 fulltext:  
