--- a/papers/_posts/2019-06-26-yolo-rss.md
+++ b/papers/_posts/2019-06-26-yolo-rss.md
@@ -10,7 +10,7 @@ volume:
 issue: 
 pages:
 authors: "Alves-Oliveira, P., Arriaga, Hoffman, G., & Paiva, A."
-image: interaction-yolo.png
+image: interaction-yolo.jpg
 pdf: AlvesOliveiraRSSPioneers19.pdf
 pdflink: 
 fulltext:  
