added handovers project and iros paper

--- a/papers/_posts/2019-03-11-ebrd-hri.md
+++ b/papers/_posts/2019-03-11-ebrd-hri.md
@@ -23,7 +23,7 @@ doi: 10.1109/HRI.2019.8673201
 category: papers
 published: true
 award:
-tags: [design, best-paper]
+tags: [studies, competition]
 ---
 {% include JB/setup %}
 
