--- a/misc/_posts/2018-03-26-home.md
+++ b/misc/_posts/2018-03-26-home.md
@@ -6,5 +6,5 @@ categories:
 homepage: true
 ---
 The Human-Robot Collaboration &amp; Companionship (HRC<sup>2</sup>) Lab at [Cornell](http://cornell.edu) is headed by [Guy Hoffman](http://guyhoffman.com) and studies the the computational, engineering, and social aspects of interactions between humans and robots. 
-Research interests include: **human-robot teamwork** and collaboration; personal **robotic companions**; non-anthropomorphic **robot design**; AI and **machine learning for human-robot interaction** (HRI); potential effects of introducing **robots in the workplace**; robot **assistants for cognitive tasks**; timing and **fluency in HRI** and multi-agent MDPs; entertainment, theater, and musical performance robots; **robot improvisation**; and nonverbal communication in HRI.
+Research interests include: **human-robot teamwork** and collaboration; personal **robotic companions**; non-anthropomorphic **robot design**; AI and **machine learning for human-robot interaction** (HRI); effects of introducing **robots in the workplace**; robot **assistants for cognitive tasks**; timing and **fluency in HRI** and multi-agent MDPs; entertainment, theater, and musical performance robots; **robot improvisation**; and nonverbal communication in HRI.
 
