--- a/projects/_posts/2016-01-01-ThirdArm.md
+++ b/projects/_posts/2016-01-01-ThirdArm.md
@@ -16,6 +16,6 @@ The Wearable Robotic Third Arm project seeks to build a lightweight supernumerar
 
 **Collaborators: [Vighnesh Vatsal](http://hrc2.io/people/vighnesh-vatsal), Tatsuhiro Koshi, Mei Zhang**
 
-Human-robot augmentation is the idea of using robotics to share the physical and cognitive task loads of a human user, typically realized with wearable robots. Until recently, such devices devices have taken the form of prostheses or exoskeletons, which replace or enhance already existing human functions. We present a supernumerary robotic device that provides a user with capabilities not found in nature. 
+Human-robot augmentation is the idea of using robotics to share the physical and cognitive task loads of a human user, typically realized with wearable robots. Until recently, such devices have taken the form of prostheses or exoskeletons, which replace or enhance already existing human functions. We present a supernumerary robotic device that provides a user with capabilities not found in nature. 
 
 Our device is an elbow mounted additional forearm, aimed at human-robot collaboration in close-range activities. The primary research goal is to study the interaction schemes and generate autonomous robot behaviors that will assist a user in a collaborative manipulation or assembly task.
