updated new students and cropped photos

--- a/people/past/2017-02-01-emma-cohn.md
+++ b/people/past/2017-02-01-emma-cohn.md
@@ -11,6 +11,6 @@ github: emmac127
 scholar: 
 image: /assets/images/team/emma-cohn.jpg
 cv: 
-alum: false
+alum: true
 ---
 Emma Cohn is a sophomore undergraduate student in computer science working on user interface software development for Blossom.
