spring20 lab meember refresh

--- a/people/past/2019-02-18-song-ye.md
+++ b/people/past/2019-02-18-song-ye.md
@@ -1,7 +1,7 @@
 ---
 layout: member
 title: Song Ye
-position: MS Student
+position: MPS Student
 field: Information Science
 nickname: song-ye
 handle: sy689
