--- a/people/past/2019-03-01-zhiyu-mao.md
+++ b/people/past/2019-03-01-zhiyu-mao.md
@@ -1,7 +1,7 @@
 ---
 layout: member
 title: "Zhiyu Mao"
-position: MS Student
+position: MPS Student
 field: Information Science
 nickname: Max
 handle: zm255
