--- a/projects/_posts/2019-04-30-Facework.md
+++ b/projects/_posts/2019-04-30-Facework.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: "Balancing Social and Performance Goals in Decision-Making with Agents"
+title: "Decision-Making Agents that Balancing Social and Performance Goals"
 image: /assets/images/projects/facework.png
 category: projects
 published: true
@@ -17,11 +17,11 @@ We present an agent algorithm that attempts to balance improving a human's decis
 
 
 In this work, a human and a robotic arm work together to make the best decision to rank items for survival. 
-We propose an agent that integrates facework, a common social ritual to protect interactants from negative affects associated with losing face, [into its action selection process](https://hrc2.io/papers/facework-fss). 
+We [propose an agent]((https://hrc2.io/papers/facework-fss)) that integrates facework, a common social ritual to protect interactants from negative affects associated with losing face, into its action selection process. 
 Using rule-based methods, the agent trades off optimal advice for suggestions that attempts to seek agreement, avoid disagreements, and make indirect requests to human partners. 
 We evaluate the impact of our agent against an optimal agent agent in an online interaction environment: 
 
-<div class="video-container"><iframe width="560" height="315" src="https://drive.google.com/file/d/1s02M0jrACB4lMaGcJR1c-qd5FFcIjpcW/view?usp=sharing" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://youtu.be/hcFVQWOpwvU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 
 
 
