--- a/projects/_posts/2019-04-30-Facework.md
+++ b/projects/_posts/2019-04-30-Facework.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: "Decision-Making Agents that Balancing Social and Performance Goals"
+title: "Decision-Making Agent that Balances Social and Performance Goals"
 image: /assets/images/projects/facework.png
 category: projects
 published: true
