--- a/projects/_posts/2019-04-30-Facework.md
+++ b/projects/_posts/2019-04-30-Facework.md
@@ -21,7 +21,7 @@ We [propose an agent]((https://hrc2.io/papers/facework-fss)) that integrates fac
 Using rule-based methods, the agent trades off optimal advice for suggestions that attempts to seek agreement, avoid disagreements, and make indirect requests to human partners. 
 We evaluate the impact of our agent against an optimal agent agent in an online interaction environment: 
 
-<div class="video-container"><iframe width="560" height="315" src="https://youtu.be/hcFVQWOpwvU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/hcFVQWOpwvU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
 
 
