--- a/projects/_posts/2019-12-10-ASIST.md
+++ b/projects/_posts/2019-12-10-ASIST.md
@@ -12,7 +12,7 @@ In this work, we develop models for team trust when teammates may have competing
 
 <!--more-->
 
-**Collaborators: JiHyun Jeong (Cornell), Stanley Celestin (Cornell), Suresh Kumaar Jayaraman (Cornell) and Guy Hoffman (Cornell).**
+**Collaborators: JiHyun Jeong (Cornell), Stanley Celestin (Cornell), Alison Duan (Cornell), Suresh Kumaar Jayaraman (Cornell) and Guy Hoffman (Cornell).**
 
 
 This project is in part material based upon work on the Artificial Social Intelligence for Successful Teams (ASIST) program supported by DARPA under Contract No. W911NF2010004. 
