--- a/projects/_posts/2019-04-30-Facework.md
+++ b/projects/_posts/2019-04-30-Facework.md
@@ -3,7 +3,7 @@ layout: project
 title: "Decision-Making Agent that Balances Social and Performance Goals"
 image: /assets/images/projects/facework.png
 category: projects
-published: true
+published: false
 tags: [studies]
 ---
 {% include JB/setup %}
