--- a/projects/_posts/2019-12-10-ASIST.md
+++ b/projects/_posts/2019-12-10-ASIST.md
@@ -1,18 +1,24 @@
 ---
 layout: project
-title: "Trust in Socially Intelligent Agents"
-image: 
+title: "Cooperation Dynamics in Human-AI teams"
+image: /assets/images/projects/asist-map.jpg
 category: projects
 published: true
 tags: [studies]
 ---
 {% include JB/setup %}
 
-In this work, we develop models for team trust when teammates may have competing goals and propose social interventions that can engender and repair trust in teams. 
+
+The Human-AI Teams project investigates how humans collaborate, trust, and perform with their teammates that may potentially have differing motivations and varying skill levels.
 
 <!--more-->
 
 **Collaborators: JiHyun Jeong (Cornell), Stanley Celestin (Cornell), Alison Duan (Cornell), Suresh Kumaar Jayaraman (Cornell) and Guy Hoffman (Cornell).**
 
+Effective teamwork relies not only on task competence but also on compromise and coordination towards shared objectives. However, team members can often have diverging priorities and motives. Drawing on research in social dilemmas—which highlights the tension between self-interest and the common good—our project investigates how both competence and motives influence cooperation and trust.
 
-This project is in part material based upon work on the Artificial Social Intelligence for Successful Teams (ASIST) program supported by DARPA under Contract No. W911NF2010004. 
+To explore these dynamics, we developed a multiplayer search-and-rescue game as our research platform. In this environment, players share limited resources, search for targets, and decide whether to acquire them selfishly or cooperatively. We study how cooperation evolves as players update their beliefs about their teammates’ motives and relative competence through real-time communication and observation.
+
+We also integrate AI agents that can leverage these learned dynamics to facilitate teamwork within hybrid human-AI teams.
+
+This project is based on work for the Artificial Social Intelligence for Successful Teams (ASIST) program supported by DARPA Award No. W911NF2010004. 
